# llm-compass

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  SPEC.md  package-lock.json  package.json  phase1-prompt.md  pyproject.toml
.github/workflows/: deploy-docs.yml
.omc/: project-memory.json
.omc/sessions/: 04392a67-d8c0-471e-8654-a567547c3103.json  182ebce8-776d-4d6f-a6d8-2671dd9bff61.json  501b7e96-c069-499c-bafb-f797807ff4d4.json  bf764bf0-ff5f-4880-8f4a-f5063135e1cf.json  e1310808-52df-4b03-b75c-05074a6b6cdf.json
.playwright-mcp/: page-2026-05-29T12-42-06-517Z.yml  page-2026-05-29T13-58-03-799Z.yml
data/: prices.schema.json
data/history/: 2026-05-29.json
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: PriceTable.vue  custom.css  index.ts
docs/guard/: index.md
docs/plans/: index.md
docs/pricing/: index.md
scripts/: __init__.py  fetch_prices.py  models.py  validate.py
scripts/providers/: __init__.py  anthropic.py  base.py  deepseek.py  fireworks.py  google.py  groq.py  mimo.py  mistral.py  openai.py  openrouter.py  together.py
tests/: test_providers.py
tests/fixtures/: anthropic.html  deepseek.html  fireworks.html  google.html  groq.html  mimo.json  mistral.html  openai.html  openrouter.json  together.json
